feat: :white_check_mark: best pratices

--- a/css/font/font.css
+++ b/css/font/font.css
@@ -1,1 +1,35 @@
-@import url('https://fonts.googleapis.com/css2?family=Asap:wght@400;500;600;700&display=swap');
+@font-face {
+    font-family: 'Luciole';
+    src: url('./Luciole-Regular.ttf') format('truetype');
+    font-weight: normal;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Luciole';
+    src: url('./Luciole-Bold.ttf') format('truetype');
+    font-weight: bold;
+    font-style: normal;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Luciole';
+    src: url('./Luciole-Bold-Italic.ttf') format('truetype');
+    font-weight: normal;
+    font-style: italic;
+    font-display: swap;
+  }
+  
+  @font-face {
+    font-family: 'Luciole';
+    src: url('./Luciole-Bold-Italic.ttf') format('truetype');
+    font-weight: bold;
+    font-style: italic;
+    font-display: swap;
+  }
+
+
+  
+  
