--- a/css/styles.css
+++ b/css/styles.css
@@ -10,18 +10,18 @@ body {
   width: 90%;
   position: relative;
   margin: auto;
-  padding-left: 250px;
+  padding-left: 15.625rem;
   background: #fff;
-  box-shadow: 0 0 5px rgba(0, 0, 0, 0.1);
+  box-shadow: 0 0 0.3125rem rgba(0, 0, 0, 0.1);
 }
 
 .header {
   float: left;
-  margin-left: -250px;
-  width: 250px;
+  margin-left: -16.625rem;
+  width: 16.625rem;
   position: absolute;
   background: #f5f5f5;
-  border-right: 1px solid rgba(0, 0, 0, 0.1);
+  border-right: 0.0625rem solid rgba(0, 0, 0, 0.1);
   top: 0;
   bottom: 0;
   animation-name: slideInFromLeft;
@@ -44,9 +44,9 @@ body {
 }
 
 .title {
-  font-size: 2em;
+  font-size: 2rem;
   font-weight: bold;
-  border-bottom: 3px solid #f39c12;
+  border-bottom: 0.187 solid #f39c12;
   padding-bottom: 1rem;
 }
 
@@ -63,23 +63,23 @@ img {
   height: 100%;
 }
 .nav-links > :first-child {
-  border-bottom: 2px solid #f39c12;
+  border-bottom: 0.125rem solid #f39c12;
 }
 
 .nav-item {
   font-size: 1.2rem;
-  padding-top: 8px;
-  padding-bottom: 8px;
+  padding-top: 0.5rem;
+  padding-bottom: 0.5rem;
   background-color: #dddddd;
-  border-radius: 5px;
-  margin-top: 5px;
+  border-radius: 0.3125rem;
+  margin-top: 0.3125rem;
   transition: background-color 300ms ease-in-out;
 }
 .nav-item:hover {
   background-color: #f39c12;
 }
 .nav-item > a {
-  padding-left: 15px;
+  padding-left: 0.9375rem;
   text-transform: uppercase;
 }
 
@@ -88,13 +88,12 @@ img {
 }
 
 .content-focus {
-  border-bottom: 3px solid #ccc;
+  border-bottom: 0.1875rem solid #ccc;
   padding-bottom: 2rem;
   margin-bottom: 2rem;
   display: flex;
   justify-content: center;
   align-items: flex-start;
-  border-bottom: 3px solid #ccc;
 }
 
 .content-titles {
@@ -106,26 +105,27 @@ img {
 .content-titles::before {
   content: "";
   display: block;
-  height: 1px;
+  height: 0.0625rem;
   width: 80%;
   background-color: #f39c12;
   margin-left: auto;
 }
 
 .content-title {
-  max-width: 450px;
+  max-width: 28.125rem;
   margin-left: auto;
 }
 .content-title--main {
   font-weight: bold;
   text-align: right;
-  margin-top: 20px;
+  margin-top: 1.25rem;
 }
 
 .content-title--sub {
   text-align: right;
   color: #aaa;
-  margin-top: 20px;
+ 
+  margin-top: 1.25rem;
   font-weight: bold;
 }
 
@@ -135,7 +135,7 @@ img {
 }
 
 .rounded {
-  border-radius: 10px;
+  border-radius: 0.625rem;
   overflow: hidden;
 }
 
@@ -150,21 +150,21 @@ img {
   width: 100%;
   background: rgba(0, 0, 0, 0.5);
   color: white;
-  padding: 10px;
+  padding: 0.625rem;
 }
 
 .content-quote {
-  border-top: 3px solid #ccc;
+  border-top: 0.1875rem solid #ccc;
   margin-top: 2rem;
 }
 
 .content p {
-  font-size: 1.1em;
+  font-size: 1.1rem;
   line-height: 1.5;
 }
 
 .content h3 {
-  font-size: 1.7em;
+  font-size: 1.7rem;
   font-weight: bold;
   margin-top: 2rem;
   margin-bottom: 1rem;
@@ -173,8 +173,8 @@ img {
 .content ol {
   list-style-type: decimal;
   color: #111;
-  font-size: 1.1em;
-  margin-left: 1.5em;
+  font-size: 1.1rem;
+  margin-left: 1.5rem;
   line-height: 1.5;
 }
 
@@ -191,7 +191,7 @@ img {
 .card {
   margin-bottom: 2rem;
   flex: 1 1 50%;
-  padding: 5px;
+  padding: 0.3125rem;
 }
 
 .card-title {
@@ -218,11 +218,11 @@ img {
 .btn {
   padding: 1rem 2rem;
   font-size: 1.2em;
-  border: solid 3px #f39c12;
+  border: solid 0.1875rem #f39c12;
   color: #f39c12;
   font-weight: bold;
-  border-radius: 35px;
-  margin: 5px;
+  border-radius: 2.1875rem;
+  margin: 0.3125rem;
   transition: background-color 300ms ease-in-out, color 300ms ease-in-out;
 }
 .btn:hover {
@@ -238,6 +238,7 @@ img {
 
 h2.content-title.content-title--sub {
   color: #112a46; 
+  font-size: 2rem;
 }
 
 div.container {
@@ -315,7 +316,7 @@ a.btn {
   .nav-item {
     width: calc(33.3333% - 0.5rem);
     text-align: center;
-    padding: 10px;
+    padding: 0.625rem;
   }
 
   .nav-item-link {
@@ -346,12 +347,12 @@ a.btn {
     display: flex;
     justify-content: space-between;
     align-items: center;
-    font-size: 1px;
+    font-size: 0.0625rem;
     margin-bottom: 0;
     margin-top: 0;
   }
   .nav-item {
-    padding: 10px;
+    padding: 0.625rem;
     font-size: 15em;
     width: calc(33.3333% - 0.5rem);
     text-align: center;
@@ -375,6 +376,6 @@ a.btn {
     font-size: 1em;
   }
   .content-title--sub {
-    margin-bottom: 15px;
+    margin-bottom: 0.9375rem;
   }
 }
